# Video-component

./: Approach_to_implement_API.md  Approach_to_implement_API.mds  Approach_to_implement_APIs  CMakeLists.txt  Documentation.md  Documentation1.md  Documentation2.md  Init_code.cpp  Initialisation_documentation.md  OpenCV_intro.cpp  README.md  RunCommands.txt  Run_commands.txt  StreamToMemory.cpp  StreamtoMemory.cpp  VideoFunctions.cpp  VideoFunctions.h  a.out  code1.cpp  code2.cpp  config.json  helpercode.cpp  initialiseCapture.cpp  run_commands.txt  shunyaVideoFunctions.h  test.cpp  test1.cpp
FrameToMemory/: Documentation1.md
FrameToMemory/include/si/: json_settings_alerts.h  parse_config.h
Json_code/: example.json  test.cpp
Json_code/include/si/: json_settings_dash.h  json_settings_iiot.h
StreamToMemory/: Documentation.md  RunCommands.txt  StreamToMemory.cpp  a.out
include/: VideoFunctions.h
include/si/: json_settings_cloud.h  json_settings_conn.h  siYaml.h
src/: VideoFunctions.cpp  VideoFunctions.h
